feat: add jwt auth layer
