# services/clothing/models/cloth.sql.go
@@ -1,121 +1,0 @@
-// Code generated by sqlc. DO NOT EDIT.
-// versions:
-//   sqlc v1.28.0
-// source: cloth.sql
-
-package models
-
-import (
-	"context"
-
-	"github.com/jackc/pgx/v5/pgtype"
-)
-
-const createCloth = `-- name: CreateCloth :one
-INSERT INTO clothes (id, name, category, color, size, brand, location, created_at, updated_at) 
-VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9)
-RETURNING id, name, category, color, size, brand, location, created_at, updated_at
-`
-
-type CreateClothParams struct {
-	ID        pgtype.UUID
-	Name      string
-	Category  string
-	Color     string
-	Size      string
-	Brand     string
-	Location  string
-	CreatedAt pgtype.Timestamp
-	UpdatedAt pgtype.Timestamp
-}
-
-func (q *Queries) CreateCloth(ctx context.Context, arg CreateClothParams) (Clothe, error) {
-	row := q.db.QueryRow(ctx, createCloth,
-		arg.ID,
-		arg.Name,
-		arg.Category,
-		arg.Color,
-		arg.Size,
-		arg.Brand,
-		arg.Location,
-		arg.CreatedAt,
-		arg.UpdatedAt,
-	)
-	var i Clothe
-	err := row.Scan(
-		&i.ID,
-		&i.Name,
-		&i.Category,
-		&i.Color,
-		&i.Size,
-		&i.Brand,
-		&i.Location,
-		&i.CreatedAt,
-		&i.UpdatedAt,
-	)
-	return i, err
-}
-
-const deleteCloth = `-- name: DeleteCloth :exec
-DELETE FROM clothes WHERE id = $1
-`
-
-func (q *Queries) DeleteCloth(ctx context.Context, id pgtype.UUID) error {
-	_, err := q.db.Exec(ctx, deleteCloth, id)
-	return err
-}
-
-const getClothByID = `-- name: GetClothByID :one
-SELECT id, name, category, color, size, brand, location, created_at, updated_at FROM clothes WHERE id = $1
-`
-
-func (q *Queries) GetClothByID(ctx context.Context, id pgtype.UUID) (Clothe, error) {
-	row := q.db.QueryRow(ctx, getClothByID, id)
-	var i Clothe
-	err := row.Scan(
-		&i.ID,
-		&i.Name,
-		&i.Category,
-		&i.Color,
-		&i.Size,
-		&i.Brand,
-		&i.Location,
-		&i.CreatedAt,
-		&i.UpdatedAt,
-	)
-	return i, err
-}
-
-const listClothes = `-- name: ListClothes :many
-SELECT id, name, category, color, size, brand, location, created_at, updated_at FROM clothes
-`
-
-func (q *Queries) ListClothes(ctx context.Context) ([]Clothe, error) {
-	rows, err := q.db.Query(ctx, listClothes)
-	if err != nil {
-		return nil, err
-	}
-	defer rows.Close()
-	var items []Clothe
-	for rows.Next() {
-		var i Clothe
-		if err := rows.Scan(
-			&i.ID,
-			&i.Name,
-			&i.Category,
-			&i.Color,
-			&i.Size,
-			&i.Brand,
-			&i.Location,
-			&i.CreatedAt,
-			&i.UpdatedAt,
-		); err != nil {
-			return nil, err
-		}
-		items = append(items, i)
-	}
-	if err := rows.Err(); err != nil {
-		return nil, err
-	}
-	return items, nil
-}
